Add Github Auth

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GitHub": {
+    "ClientId": "eaa4924bf347da4bf6f5",
+    "ClientSecret": "your client secret"
+  }
 }
